Remove JVM opts to allow users to specify